--- a/code/MEG ERFs.ipynb
+++ b/code/MEG ERFs.ipynb
@@ -32,7 +32,24 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 3,
+   "execution_count": 7,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "['../../../../MEG_raw01/161101_amano_SD', '../../../../MEG_raw01/161101_minami_SD', '../../../../MEG_raw01/161101_nakagawa_SD', '../../../../MEG_raw01/161101_okahashi_SD', '../../../../MEG_raw01/170131_fujita_SD', '../../../../MEG_raw01/170131_koizumi_SD', '../../../../MEG_raw01/170131_oishi_SD', '../../../../MEG_raw01/170131_yuasa_SD', '../../../../MEG_raw01/170728_alex_SD', '../../../../MEG_raw01/170728_lyu_SD', '../../../../MEG_raw01/170731_kawaguchi_SD', '../../../../MEG_raw01/170731_miyauchi_SD', '../../../../MEG_raw01/170804_ouchida_SD', '../../../../MEG_raw01/170804_sunami_SD', '../../../../MEG_raw01/170804_yasui_SD', '../../../../MEG_raw01/170807_emoto_SD', '../../../../MEG_raw01/170807_hashizume_SD', '../../../../MEG_raw01/170807_ishikawa_SD', '../../../../MEG_raw01/170808_nakamura_SD', '../../../../MEG_raw01/170808_noguchi_SD', '../../../../MEG_raw01/170808_yasumura_SD']\n"
+     ]
+    }
+   ],
+   "source": [
+    "print([k for k in folder_dict.keys()])"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 8,
    "metadata": {},
    "outputs": [],
    "source": [
