--- a/code/test_ml.ipynb
+++ b/code/test_ml.ipynb
@@ -119,7 +119,7 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "def get_y_true(n_classes=2):\n",
+    "def generate_y(n_classes=2):\n",
     "    y = []\n",
     "    for i in range(6):\n",
     "        y_path = \"../../../../MEG/Behaviour/07fujita0131/fujita0131_session_20170131T145759_block%s_data.mat\" % (i + 1)\n",
@@ -171,26 +171,21 @@
     }
    ],
    "source": [
-    "X = np.einsum('ikj->ijk', np.array([next(stc_epoch).crop(0, 0.4, False).bin(0.025).data for i in range(500)]))\n",
-    "X_test = np.einsum('ikj->ijk', np.array([next(stc_epoch).crop(0, 0.4, False).bin(0.025).data for i in range(100)]))\n",
+    "X = np.einsum('ikj->ijk', np.array([next(stc_epoch).crop(0, 0.4, False).bin(0.025).data for i in range(600)]))\n",
+    "X_train, X_test = X[:500], X[500:]\n",
     "del stc_epoch\n",
+    "del X\n",
     "print(X.shape)"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 7,
+   "execution_count": null,
    "metadata": {},
    "outputs": [],
    "source": [
-    "y = []\n",
-    "for i in range(5):\n",
-    "    y_path = \"../../../../MEG/Behaviour/07fujita0131/fujita0131_session_20170131T145759_block%s_data.mat\" % (i + 1)\n",
-    "    y += ml.classify_target_gabors(y_path)  \n",
-    "y = np.array(y)\n",
-    "\n",
-    "y_test_path = \"../../../../MEG/Behaviour/07fujita0131/fujita0131_session_20170131T145759_block6_data.mat\"\n",
-    "y_test = np.array(ml.classify_target_gabors(y_test_path))"
+    "y = generate_y(n_classes=0)\n",
+    "y_train, y_test = y[:500], y[500:]"
    ]
   },
   {
@@ -236,7 +231,7 @@
    ],
    "source": [
     "model = ml.RNNModel(n_epochs=20)\n",
-    "model.fit(X, y)"
+    "model.fit(X_train, y_train)"
    ]
   },
   {
@@ -259,7 +254,7 @@
    ],
    "source": [
     "model.evaluate(X_test, y_test)\n",
-    "y_pred =model.predict(X_test)\n",
+    "y_pred = model.predict(X_test)\n",
     "y_pred = np.round(y_pred.T[0])\n",
     "accuracy = calc_accuracy(y_pred, y_test)\n",
     "print(accuracy)\n",
@@ -335,26 +330,21 @@
     }
    ],
    "source": [
-    "X = np.array([next(stc_epoch).crop(0, 0.4).bin(0.025).lh_data for i in range(500)])\n",
-    "X_test = np.array([next(stc_epoch).crop(0, 0.4).bin(0.025).lh_data for i in range(100)])\n",
+    "X = np.array([next(stc_epoch).crop(0, 0.4).bin(0.025).lh_data for i in range(600)])\n",
+    "X_train, X_test = X[:500], X[500:]\n",
     "del stc_epoch\n",
+    "del X\n",
     "print(X.shape)"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 29,
+   "execution_count": null,
    "metadata": {},
    "outputs": [],
    "source": [
-    "y = []\n",
-    "for i in range(5):\n",
-    "    y_path = \"../../../../MEG/Behaviour/07fujita0131/fujita0131_session_20170131T145759_block%s_data.mat\" % (i + 1)\n",
-    "    y += ml.classify_target_gabors(y_path)\n",
-    "y = np.array(y)\n",
-    "\n",
-    "y_test_path = \"../../../../MEG/Behaviour/07fujita0131/fujita0131_session_20170131T145759_block6_data.mat\"\n",
-    "y_test = np.array(ml.classify_target_gabors(y_test_path))"
+    "y = generate_y(n_classes=0)\n",
+    "y_train, y_test = y[:500], y[500:]"
    ]
   },
   {
@@ -455,7 +445,7 @@
     "                    LinearModel(LogisticRegression(C=0.5, solver='saga', l1_ratio=0.6, penalty='elasticnet')))\n",
     "time_decod = SlidingEstimator(clf, scoring='roc_auc')\n",
     "\n",
-    "scores = cross_val_multiscore(time_decod, X, y, cv=5, n_jobs=1)"
+    "scores = cross_val_multiscore(time_decod, X_train, y_train, cv=5, n_jobs=1)"
    ]
   },
   {
@@ -517,7 +507,7 @@
     }
    ],
    "source": [
-    "time_decod.fit(X, y)"
+    "time_decod.fit(X_train, y_train)"
    ]
   },
   {
@@ -545,7 +535,7 @@
    ],
    "source": [
     "y_pred = time_decod.predict(X_test)\n",
-    "accuracy_lst = [calc_accuracy(y_pred[i], y_test) for i in range(16)]\n",
+    "accuracy_lst = [calc_accuracy(y_pred[:, i], y_test) for i in range(16)]\n",
     "print(max(accuracy_lst))"
    ]
   },
