add random test

--- a/code/test_ml.ipynb
+++ b/code/test_ml.ipynb
@@ -483,7 +483,7 @@
    ],
    "source": [
     "# prepare a series of classifier applied at each time sample\n",
-    "clf = make_pipeline(#StandardScaler(),  # z-score normalization\n",
+    "clf = make_pipeline(StandardScaler(),  # z-score normalization\n",
     "                    SelectKBest(f_classif, k=200),  # select features for speed\n",
     "                    LinearModel(LogisticRegression(C=0.3, solver='saga', l1_ratio=0.6, penalty='elasticnet', max_iter=1000)))\n",
     "#time_decod = SlidingEstimator(clf, scoring=roc_auc_ovo)\n",
@@ -637,6 +637,33 @@
      }
     }
    ],
+   "source": [
+    "plt.plot(np.linspace(0, 0.4, 16), accuracy_lst)"
+   ]
+  },
+  {
+   "source": [
+    "### Test for random y values"
+   ],
+   "cell_type": "markdown",
+   "metadata": {}
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "y_rand = np.random.randint(2, size=100)\n",
+    "accuracy_lst = [calc_accuracy(y_pred[:, i], y_rand) for i in range(16)]\n",
+    "print(max(accuracy_lst))"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
    "source": [
     "plt.plot(np.linspace(0, 0.4, 16), accuracy_lst)"
    ]
