--- a/Wrtiting/introduction/introduction.tex
+++ b/Wrtiting/introduction/introduction.tex
@@ -6,10 +6,14 @@
 \usepackage[rightcaption]{sidecap}
 \usepackage{hyperref}
 
-\title{ML Serial Dependence}
+\title{Introduction}
 
 \author{Henry Allen}
 
 \begin{document}
+
+\maketitle
+
+\section{Introduction}
     
 \end{document}
