refactoring code and generating figs

--- a/code/test_ml.ipynb
+++ b/code/test_ml.ipynb
@@ -8,7 +8,7 @@
     "name": "ipython",
     "version": 3
    },
-   "version": "3.7.4-final"
+   "version": "3.6.9-final"
   },
   "orig_nbformat": 2,
   "file_extension": ".py",
@@ -80,6 +80,35 @@
     "    \"MK\":  \"12kawaguchi0731/kawaguchi0731_session_20170731T153637\",\n",
     "    \"NNo\": \"19noguchi0808/noguchi0808_session_20170808T102813\",\n",
     "}"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 15,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "y, _ = ml.load_y(\"NN\", n_classes=4)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 16,
+   "metadata": {},
+   "outputs": [
+    {
+     "output_type": "stream",
+     "name": "stdout",
+     "text": "{0: 99, 1: 94, 2: 116, 3: 91}\n"
+    }
+   ],
+   "source": [
+    "hist = {0: 0, 1: 0, 2: 0, 3: 0}\n",
+    "\n",
+    "for i in y:\n",
+    "    hist[i] += 1\n",
+    "\n",
+    "print(hist)"
    ]
   },
   {
